# Cplusplus_IPCLib

./: .gitignore  .gitmodules  Dockerfile  LICENSE.MD  README.md
Adaptation_Cmake/: CMakeLists.txt  main.cpp
Adaptation_Cmake/ipc_lib/: CMakeLists.txt  lib.cpp  lib.h
cross-platform/: CMakeLists.txt  build.txt
cross-platform/testing/: CMakeLists.txt  Dockerfile  main.cpp
cross-platform/testing_client/: CMakeLists.txt  main.cpp
cross-platform/testing_server/: CMakeLists.txt  command_line_parser.hpp  main.cpp
legacy/src/net/: client.hpp  connection.hpp  message.hpp  server.hpp
legacy/src/security/: rsa.cpp
src/: IPC.cpp  IPC.sln  IPC.vcxproj  IPC.vcxproj.filters  TO_DO_LIST.txt  http_request.cpp  http_request.hpp  http_response.cpp  http_response.hpp  https_request.hpp  https_response.cpp  https_response.hpp  logger.hpp  secure_web_client.cpp  secure_web_client.hpp  web_request_helpers.hpp
src/net/: Client.hpp  Connection.hpp  Message.hpp  Server.hpp  base_web_client.hpp  base_web_server.hpp  client_disconnect_observer.hpp  http_request.cpp  http_request.hpp  http_response.cpp  http_response.hpp  ihttp_message.cpp  ihttp_message.hpp  secure_web_client.cpp  secure_web_client.hpp  secure_web_server.cpp  secure_web_server.hpp  udp_web_client.cpp  udp_web_client.hpp  web_client.cpp  web_client.hpp  web_helpers.cpp  web_helpers.hpp  web_message_controller.cpp  web_message_controller.hpp  web_message_dispatcher.cpp  web_message_dispatcher.hpp  web_message_reciever.cpp  web_message_reciever.hpp  web_request_helpers.hpp  web_server.cpp  web_server.hpp
src/security/: RSA.cpp  RSA.hpp
src/testing/: testing.cpp  testing.vcxproj  testing.vcxproj.filters  win_process_manager.cpp  win_process_manager.hpp
src/testing/common/: command_line_parser.hpp  commnad_line_parser.cpp  event_helpers.cpp  message_types.hpp  observer.cpp  observer.hpp  timer.hpp  type_converters.cpp  type_converters.hpp
src/testing/testing_client/: test_client.cpp  test_client.hpp  testing_client.cpp  testing_client.vcxproj  testing_client.vcxproj.filters
src/testing/testing_server/: test_server.cpp  test_server.hpp  testing_server.cpp  testing_server.vcxproj  testing_server.vcxproj.filters
src/testing/testing_web_client/: testing_web_client.cpp  testing_web_client.vcxproj  testing_web_client.vcxproj.filters  universities.hipolabs.com_response.txt  www.dataaccess.com_encoded_response.txt  www.dataaccess.com_response.txt
src/testing/web_testing_server/: web_testing_server.cpp  web_testing_server.vcxproj  web_testing_server.vcxproj.filters
src/utile/: IPCDataTypes.hpp  MessageIdProvider.hpp  ThreadSafeQueue.hpp  data_types.hpp  finally.cpp  finally.hpp  generic_error.hpp  gzip_helpers.cpp  gzip_helpers.hpp  observer.hpp  serializable_data.hpp  thread_safe_queue.hpp  timer.hpp
testing_web_client/: testing_web_client.cpp  testing_web_client.vcxproj
windows/: .dockerignore  Dockerfile  IPC.sln  IPC.vcxproj  IPC.vcxproj.filters  IPC_Legacy.vcxproj  IPC_Legacy.vcxproj.filters
windows/testing/: testing.cpp  testing.vcxproj
windows/testing/common/: commnad_line_parser.cpp  event_helpers.hpp
windows/testing/testing_client/: test_client.cpp  test_client.hpp  testing_client.vcxproj  testing_client.vcxproj.filters
windows/testing/testing_server/: testing_server.vcxproj
windows/testing/testing_web_client/: testing_web_client.cpp  testing_web_client.vcxproj  testing_web_client.vcxproj.filters
windows/testing/web_testing_server/: web_testing_server.cpp  web_testing_server.vcxproj
